# S-Faster-Lio

./: CMakeLists.txt  README.md  package.xml
config/: avia.yaml  horizon.yaml  ouster64.yaml  rslidar.yaml  velodyne.yaml
include/: common_lib.h  esekfom.hpp  use-ikfom.hpp
include/voxmap/: basic_voxel_node.h  voxel_index.h  voxel_map.h
launch/: mapping_avia.launch  mapping_horizon.launch  mapping_ouster64.launch  mapping_velodyne.launch
shell/: run.sh
src/: IMU_Processing.hpp  laserMapping.cpp
